css/main.css
body {
    font-family: 'Montserrat', sans-serif;
    font-size: 15px;
    line-height: 1.2;
    padding: 0;
    margin: 0;
    background-color: #4C4B63; 
    /* overflow: hidden;  */
}

.all {
    margin: auto;
    height: 600px;
    overflow: hidden;
}
.all:nth-child(odd){
    border-top: black 2px solid;
    background-color: #ABA8B2;
}
.all:nth-child(even){
    background-color: #4C4B63;
}

/* header styling */

#navbar {
    font-family: 'Kanit', sans-serif;
    position: fixed;
    border-bottom: 2px solid black;
    top: 0;
    width: 100%;
    height: 70px;
    background-color: #4C4B63;
}

#navbar #logo  {
    color: #ABA8B2;
    float: left;  
    margin: 0 0 0 30px;
    font-weight: bolder;
    padding: 25px 60px 40px 20px;
    width: 60%;
    font-family: 'Pacifico', cursive;
}

#navbar .go {
    overflow: hidden;
    display: flex;
    height: 80px;

}

#navbar .go a {
    text-decoration: none;
    text-transform: uppercase;
    padding: 30px;
    display: block;
    text-align: center;
    float: right;
    color: #ABA8B2;
    font-weight: bold;
    font-size: 22px;
}

#navbar .go a:hover {
    text-align: center;
    color: rgb(150, 80, 150);
    font-weight: bold;
}

/* sections styling */
#main {
    height: 260px;
    text-align: center;
    background-color: #ABA8B2;
    border-bottom: 2px solid black;
    border-top: 2px solid black;
    padding-top: 100px;
}
h2 {
    font-size: 50px;
}

h2, h3{
    font-family: 'Pacifico', cursive;
    font-weight: 900;
    padding-top: 20px;
    margin: 15px;
    text-align: center;
}
h3 {
    font-size: 30px;
}

h4 {
    font-size: 22px;
    font-weight: 900;
    padding: 15px 20px 15px 20px;
    margin: 15px;
    text-align: center;
}
p {
    font-size: 22px;
    padding: 15px;
}
#statement li {
    font-size: 18px;
    padding: 8px;
    margin: 0;
}

img {
    height: 250px;
    width: 250px;
    border-radius: 14px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    /* border: 1px solid #4C4B63; */
}

#boxes {
    margin: 20px 20px 10px 20px;
    border: 2px solid #4C4B63;
}

#boxes .box {
    float: left;
    width: 30%;
    padding: 55px 8px 20px 8px;
    text-align: center;
}

.flip {
    font-size: 18px;
    padding: 10px;
    text-align: center;
    color: black;
    background-color: #ABA8B2;
    border: 1px solid black;
    margin: auto;
}

.price {
    display: none;
}

#custom {
    margin: 20px 0 5px 0;
    height: 45px;
    width: 120px;
    padding: 8px;
    background-color: #ABA8B2;
    border-radius: 5px;
    font-size: 12px;
    position: relative;
    animation-name: moveCustom;
    animation-delay: 2s;
    animation-duration: 4s;
}

@keyframes moveCustom {
    0% {background-color: #4C4B63; left: 0px;}
    100% {background-color: rgb(150, 80, 150); left: 550px;}
}

.hide {
    visibility: hidden;
    height: 200px;
    width: 200px;
    border-radius: 4px;
}

/* footer styling */
footer {
    margin: 0;
    background-color: #4C4B63;
    border-top: 2px solid black;
    height: 100px;
    font-size: 12px;
}

#copyright{    
    font-size: 10px;
    padding-left: 20px; 
}

.btn #email {

    padding: 5px;
    background-color: #ABA8B2;
    float: left;
}

#email {
    width: 250px;
    height: 30px;
    margin: 20px;
    border-radius: 5px;
}

#address {
    margin: 0;
    text-align: center;
}

